Implement transversal sales channel contract
